# deepcool-spartacus-cpp-lib

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cmake/: spartacusConfig.cmake.in
docs/: protocol-specification.md
examples/: brightness.cpp  clear.cpp  image.cpp  linker_argb.cpp  linker_motherboard_sync.cpp  linker_read_speeds.cpp  linker_set_speeds.cpp  native_telemetry.cpp  orientation.cpp
include/spartacus/: Display.hpp  Error.hpp  Linker.hpp  Protocol.hpp  Spartacus.hpp  Version.hpp
packaging/: spartacus.pc.in
packaging/udev/: 99-spartacus.rules
src/: Display.cpp  Image.cpp  Linker.cpp  Protocol.cpp  UsbDevice.hpp
tests/: test_vectors.cpp
